# odoo-bringout-multi_company_example_ba_hr_si_data

./: README.md  pyproject.toml
multi_company_example_ba_hr_si_data/: __manifest__.py  hooks.py
multi_company_example_ba_hr_si_data/migrations/16.0.1.1.0/: post-migration.py
multi_company_example_ba_hr_si_data/migrations/16.0.1.2.0/: post-migration.py
multi_company_example_ba_hr_si_data/migrations/16.0.1.3.1/: post-migration.py
multi_company_example_ba_hr_si_data/migrations/16.0.1.5.1/: post-migration.py
multi_company_example_ba_hr_si_data/migrations/16.0.1.6.1/: post-migration.py
multi_company_example_ba_hr_si_data/migrations/16.0.1.6.2/: post-migration.py
multi_company_example_ba_hr_si_data/migrations/16.0.1.6.3/: post-migration.py
multi_company_example_ba_hr_si_data/security/: payroll_stack_groups.xml
