[project]
name = "odoo-bringout-multi_company_example_ba_hr_si_data"
version = "16.0.1.1.0"
description = "Multi-company demo data: BA / HR x2 / SI companies, shared products, payroll clerk RLS example"
authors = [
    { name = "Ernad Husremovic", email = "hernad@bring.out.ba" }
]
dependencies = [
    "odoo>=16.0",
]
readme = "README.md"
requires-python = ">= 3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Framework :: Odoo",
    "Framework :: Odoo :: 16.0",
]

[project.urls]
homepage = "https://github.com/bringout/0"
repository = "https://github.com/bringout/0"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["multi_company_example_ba_hr_si_data"]
